--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -25,20 +25,20 @@ input[type='range'] {
 }
 td.nowrap {
   position: relative;
-  width: 99%;
-  vertical-align: middle;
+  /* width: 99%; */
+  /* vertical-align: middle; */
 }
 td.nowrap > span {
   padding: 4px;
   position: absolute;
   left: 0;
   right: 0;
-  top: 0;
-  bottom: 0;
-  display: flex;
-  align-items: center;
+  top: 50%;
+  transform: translateY(-50%);
+  /* display: flex; */
+  /* align-items: center; */
   overflow: hidden;
-  max-width: 100%;
+  /* max-width: 100%; */
   text-overflow: ellipsis;
   white-space: nowrap;
 }
